# WebDM

./: Cargo.toml
site/: .babelrc  .flowconfig  .gitignore  .postcssrc  app.js  index.html  package.json  spa.html  svgo.config.js  webdm.data.json
site/lib/: styles.js  views.js
site/lib/macros/: if.macro.js
site/lib/models/: hideable.js  login_form.js
site/lib/polyfill/: webdm.js
site/lib/styles/: common.scss  fonts.scss  global.scss  login_form.scss  login_page.scss  video_background.scss
site/lib/utils/: random.js  rx.js  style.js
site/lib/views/: hideable.js  login_form.js  login_page.js  video_background.js
src/: auth.rs  convenience.rs  freedesktop.rs  main.rs  message.rs  parameterization.rs  safe.rs  script.js  webkit.rs
src/safe/: libc.rs  x11.rs
