[package]
name = "webdm"
version = "0.1.0"
authors = ["Erlend Tobiassen <erlend.tobiassen@gmail.com>"]
description = "A slightly optinionated display manager with themeable webkit login screens à la lightdm-webkit2-greeter"
edition = "2018"

[dependencies]
clap = "2.32"
toml = "0.4"
glib = "0.6"
nix = "0.13"
libc = "0.2"
glib-sys = "0.7.0"
gtk = "0.5"
gdk = "0.9"
const-c-str = "0.1.0"
x11 = {version = "2.18", features = ["xlib"]}
serde = {version = "1.0", features = ["derive"]}
ipc-channel = "0.12"
webkit2gtk = {version = "0.5", features = ["v2_8"]}
webkit2gtk-sys = "0.7"
rouille = "3.0.0"
url = "1.7.2"
serde_json = "1.0"
pam = { path = "../pam" }
users = "0.9"